# AndroidSampleProjects

./: README.md  build.gradle  settings.gradle
animator/: build.gradle
animator/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dynamic_chapter1  dynamic_chapter2  text_chapter
app/src/main/res/drawable/: border_item_selector.xml  primary_item_selector.xml  ripple1.xml  ripple2.xml  ripple3.xml  ripple4.xml  ripple5.xml  ripple6.xml
app/src/main/res/layout/: activity_animator_set_sample.xml  activity_buffer_text_view_sample.xml  activity_buffer_text_view_sample2.xml  activity_gesture_sample.xml  activity_gesture_sample2.xml  activity_handle_sample.xml  activity_layout_transition_sample.xml  activity_nested_scroll_sample1.xml  activity_nested_scroll_sample2.xml  activity_nested_scroll_sample4.xml  activity_player_full.xml  activity_player_simple.xml  activity_reccyler_view_recycer_test.xml  activity_reletive_layout.xml  activity_ripple_drawable_sample.xml  activity_sample_chooser.xml  activity_sample_list_view.xml  activity_simple_constraint_layout.xml  activity_simple_nested_list2.xml  activity_table_sample.xml  activity_text_division_sample.xml  activity_text_view_sample2.xml  activity_text_view_sample3.xml  activity_text_view_sample4.xml  activity_value_animator_sample.xml  constraint_layout.xml  fragment_nested_list_sample.xml  fragment_nested_scroll_list_sample.xml  horizontal_simple_text_item.xml  simple_text_item.xml  zoom_simple_header_text_item.xml  zoom_simple_table_item.xml
app/src/main/res/values/: arrays.xml  attrs.xml  dimens.xml  strings.xml  styles.xml
concurrent/: concurrent.md
concurrent/src/androidTest/java/com/cz/concurrent/: ExampleInstrumentedTest.java
concurrent/src/main/: AndroidManifest.xml
concurrent/src/test/java/com/cz/concurrent/: ExampleUnitTest.java
constraintlayout/src/main/: AndroidManifest.xml
datastructure/src/main/: AndroidManifest.xml
document/: DependencyGraph.md  PerformanceTest.md
drawable/src/main/: AndroidManifest.xml
drawable/src/main/res/values/: attrs.xml  ids.xml
exoplayer/src/main/: AndroidManifest.xml
fragment/src/main/: AndroidManifest.xml
gesture/src/main/: AndroidManifest.xml
gesture/src/main/res/values/: attrs.xml
gif/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
layouttransition/src/main/: AndroidManifest.xml
message/src/main/: AndroidManifest.xml
motionlayout/src/main/: AndroidManifest.xml
native-app/: build.gradle
native-app/src/main/: AndroidManifest.xml
native-app/src/main/assets/: little_price.txt
native-app/src/main/cpp/: CMakeLists.txt  basic-native-lib.cpp  basic-native-test.cpp  course-native-lib.cpp  file-native-lib.cpp  file-native-test.cpp  file-search-lib.cpp  hello-native-lib.cpp  method-native-lib.cpp  thread-native-lib.cpp  thread-native-test.cpp
native-app/src/main/cpp/basic/: Person.cpp  Person.h  math-test.cpp  math-test.h
native-app/src/main/res/layout/: activity_file_list_sample.xml  activity_file_reader_sample.xml  activity_file_watch_sample.xml  activity_hello_native_sample.xml  activity_native_file_search.xml  activity_native_method_invoke_sample.xml  activity_native_object.xml  activity_native_student_list.xml  activity_thread_consumer_and_producer.xml  activity_thread_sample.xml  fragment_native_recipe2.xml  fragment_native_recipe5.xml  fragment_native_recipe6.xml  fragment_native_student1.xml  fragment_native_student2.xml
native-app/src/main/res/values/: strings.xml
nested/src/main/: AndroidManifest.xml
okhttp/: build.gradle
okhttp/src/androidTest/java/com/squareup/okhttp/: ExampleInstrumentedTest.java
okhttp/src/main/java/com/squareup/okhttp/: Address.java  Authenticator.java  Cache.java  CacheControl.java  Call.java  Callback.java  CertificatePinner.java  Challenge.java  CipherSuite.java  Connection.java  ConnectionPool.java  ConnectionSpec.java  ConnectionSpecSelector.java  Cookie.java  CookieJar.java  Credentials.java  DiskLruCache.java  Dispatcher.java  Dns.java  (+28 more)
okhttp1x/: build.gradle
recyclerview/src/main/: AndroidManifest.xml
relativelayout/src/main/: AndroidManifest.xml
relativelayout/src/main/res/values/: attrs.xml
simplehttp/: document.md
simplehttp/resoueces/: form_request.txt  index.html  request.txt
simplenested/src/main/: AndroidManifest.xml
table/: build.gradle
table/src/main/: AndroidManifest.xml
table/src/main/res/values/: attrs.xml  styles.xml
text/: build.gradle  readme.md
text/src/main/: AndroidManifest.xml
view/: build.gradle
view/src/main/: AndroidManifest.xml
view/src/main/cpp/: CMakeLists.txt
(+725 files in other folders)
